--- a/templates/photograph.html
+++ b/templates/photograph.html
@@ -1,26 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>{{title}} | Douglas Vincent</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-  <main>
-    <h1>{{title}}</h1>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <title>{{title}} - Douglas Vincent Photographic Arts</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="origin-when-cross-origin">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Douglas Vincent, Photographic Art, Photography, Fine Art Photography, Pigment Ink Prints, Large Format Photography, Analog Photography, Film Photography, Film, Cibachrome, Ilfochrome">
+    <meta name="author" content="Douglas Vincent | Photographic Arts">
+    <meta http-equiv="Expires" content="30">
+    <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
+    <link href="/global/styles/base.css" rel="stylesheet" type="text/css" media="screen">
+  </head>
+  <body id="{{body-id}}">
+    {{header}}
 
-    <figure>
-      <img src="{{image}}" alt="{{title}}">
-    </figure>
+    <main id="main" class="detail">
+      <div class="row">
+        <div class="p-main" id="resize">
+          <div class="sizing">
+            <img src="{{image}}" alt="{{title}}" class="photograph photo1 current" data-width="1200" data-height="900">
+            <img src="{{image-home}}" alt="{{title}}" class="photograph photo2" data-width="1200" data-height="960">
+            <img src="{{image-biz}}" alt="{{title}}" class="photograph photo3" data-width="1200" data-height="960">
+          </div>
 
-    <section class="meta">
-      <p><strong>Location:</strong> {{location}}</p>
-      <p><strong>Place:</strong> {{place}}</p>
-      <p><strong>Print Type:</strong> {{print-type}}</p>
-      <p><strong>Edition:</strong> {{edition-type}}</p>
-      <p><strong>Date Cataloged:</strong> {{date}}</p>
-      <p><a href="/{{field-notes}}">Field Notes</a></p>
-    </section>
-  </main>
+          <div class="photoNav">
+            <p id="photoNavM" class="nav">
+              <a class="button gallery next" href="#">❯❯</a>
+            </p>
+            <div class="image-nav">
+              <ul>
+                <li><a class="button gallery trigger selected" id="photo1" href="#1">1</a></li>
+                <li><a class="button gallery trigger" id="photo2" href="#2">2</a></li>
+                <li><a class="button gallery trigger" id="photo3" href="#3">3</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="p-side">
+          <div class="photo-details">
+            <h2 id="title">{{title}}</h2>
+            <p class="location">{{location}}</p>
+            <p class="place">{{place}}</p>
+            <p><a href="#">Print Type</a>: {{print-type}}</p>
+            <p><a href="#">Edition Type</a>: {{edition-type}}</p>
+
+            <p class="inquire">
+              <a class="button gallery inquire" href="/inquiries/print/">INQUIRIES ❯❯</a>
+            </p>
+
+            <p id="photoNavD" class="nav">
+              <a class="button gallery next" href="#">❯❯</a>
+            </p>
+
+            <p>Read the <a href="/{{field-notes}}">field notes</a> for this image.</p>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    {{footer}}
+
+    <script type="text/javascript">
+		$(document).ready(function() {
+			noBurger = 1024;
+			$('#navToggleMain').change(function() {
+				win = $(window).width();
+				if ($('#navToggleMain').prop("checked") == true) {
+					if (win < noBurger) {
+						$('html').addClass('noscroll');
+						//$('#nav').addClass('open');
+						$('#top').addClass('open');
+						$('#grilled-cheese').addClass('open');
+					} else {
+						$('#navToggleMain').prop("checked", false);
+					}
+				}
+				else if($('#navToggleMain').prop("checked") == false) {
+					if (win < noBurger) {
+						$('html').removeClass('noscroll');
+						//$('#nav').removeClass('open');
+						$('#top').removeClass('open');
+						$('#grilled-cheese').removeClass('open');
+					} else {
+						$('#navToggleMain').prop("checked", true);
+					}
+				}
+			});
+	
+			$('#nav input[type=checkbox]').change(function() {
+				win = $(window).width();
+				className = $(this).attr('class');
+				if($(this).prop("checked") == true) {
+					if (win < noBurger) {
+						console.log("Checkbox is checked.");
+						$('.'+className+' h3').addClass('open');
+						$('#'+className).addClass('open');
+					} else {
+						console.log("Checkbox is unchecked.");
+						$(this).prop("checked", false);
+					}
+				}
+				else if($(this).prop("checked") == false) {
+					if (win < noBurger) {
+						console.log("Checkbox is unchecked.");
+						$('.'+className+' h3').removeClass('open');
+						$('#'+className).removeClass('open');
+					} else {
+						console.log("Checkbox is checked.");
+						$(this).prop("checked", true);
+					}
+				}
+			});
+		});
+	</script>
+
+	<script src="/global/scripts/general.js"></script>
+	<script src="/global/scripts/sizing.js"></script>
+	<script src="/global/scripts/photo.js"></script>
+
 </body>
 </html>
