--- a/templates/photograph.html
+++ b/templates/photograph.html
@@ -27,7 +27,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-              <a class="button gallery next" href="#">❯❯</a>
+					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
+					    <a class="button gallery next" href="solemnity.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -51,9 +52,11 @@
               <a class="button gallery inquire" href="/inquiries/print/">INQUIRIES ❯❯</a>
             </p>
 
-            <p id="photoNavD" class="nav">
-              <a class="button gallery next" href="#">❯❯</a>
+           <p id="photoNavD" class="nav">
+					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
+					    <a class="button gallery next" href="solemnity.html">❯❯</a>
             </p>
+ 
 
             <p>Read the <a href="/{{field-notes}}">field notes</a> for this image.</p>
           </div>
