--- a/templates/photograph.html
+++ b/templates/photograph.html
@@ -27,8 +27,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
-					    <a class="button gallery next" href="solemnity.html">❯❯</a>
+					    {{prev-link}}
+              {{next-link}}
             </p>
             <div class="image-nav">
               <ul>
@@ -53,8 +53,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="reflections.html">❮❮</a> 
-					    <a class="button gallery next" href="solemnity.html">❯❯</a>
+					    {{prev-link}}
+              {{next-link}}
             </p>
  
 
