--- a/templates/section.html
+++ b/templates/section.html
@@ -16,11 +16,14 @@
   {{header}}
 
   <main id="main" class="section">
-    <div class="intro">
+    <h1>{{title}}</h1>
+    <div class="port-intro">
       {{intro}}
     </div>
-    <div id="thumbs">
-      {{thumbnails}}
+    <div class="row">
+      <div id="thumbs">
+        {{thumbnails}}
+      </div>
     </div>
   </main>
 
