--- a/templates/section.html
+++ b/templates/section.html
@@ -18,7 +18,7 @@
   <main id="main" class="section">
     <h1>{{title}}</h1>
     <div class="port-intro">
-      {{intro}}
+      <p>{{intro}}</p>
     </div>
     <div class="row">
       <div id="thumbs">
