--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 
 		
 	<div class="homecontent" id="featured-hero">
-		{{featured-hero}}
+		{{featured-items}}
 	</div>
 
 </main>
@@ -31,6 +31,16 @@
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="/global/scripts/jquery.touchSwipe.min.js"></script>
+
+	<script>
+	document.addEventListener("DOMContentLoaded", () => {
+		const items = document.querySelectorAll("#featured-hero .hero-item");
+		if (!items.length) return;
+
+		const pick = items[Math.floor(Math.random() * items.length)];
+		pick.hidden = false;
+	});
+	</script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
