--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>{{title}} - Douglas Vincent Photographic Arts</title>
+    <title>Douglas Vincent Photographic Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="origin-when-cross-origin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="screen">
   </head>
-  <body id="{{body-id}}">
+  <body id="home">
     
 {{header}}
  
